--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <body>
+ <head>
+   <title>hi,world</title>
+   <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+   <style>
+     body {
+       font-family: "Fjalla One";
+
+
+    }
+   </style>
+ </head>
+   <body>
     <h1>Hello, world!</h1>
 
     <script>
